2009-04-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_client_property_changed):
	  Handle undecorated clients.

2009-04-08  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-blur-group.c: Fix for NB#109907 - blurred background
	  not updating correctly.

2009-04-08  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.37
	
2009-04-08  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher-page.c
	* src/launcher/hd-launcher-page.h
	* src/launcher/hd-launcher-tile.c
	* src/launcher/hd-launcher.c: Added back button behaviour nearer
	  the spec - clicking on dimmed areas goes 'back' - rather than
	  to home. fix NB#109392, NB#105358
	* src/home/hd-render-manager.c: removed debug print
	* src/home/hd-task-navigator.c: Now fade out only the title (not
	  the 'plate') so we don't get such a flicker effect when zooming
	  in to an app. fix NB#109969

2009-04-08  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Correctly manage closing applications while they are hibernating.

	* src/launcher/hd-app-mgr.c:
	* src/launcher/hd-app-mgr.h:
	* src/mb/hd-comp-mgr.c:

2009-04-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Little clean up: be HdLauncher the launcher group.

	* src/launcher/hd-launcher.c
	* src/launcher/hd-launcher.h
	* src/home/hd-render-manager.h
	* src/home/hd-render-manager.c
	* src/mb/hd-comp-mgr.c

2009-04-08  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Close the loading screen and notify the user if launching an app doesn't
	do anything for 10s.
	Fixes: NB#100654

	* src/launcher/hd-launcher.c: Added a timeout after which the loading screen
	will be closed.

2009-04-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c (create_thwin):
	  Center thumbnail titles vertically.

2009-04-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#93876 When a currently running application is closed the view